--- a/NowaKsiazkaTelefoniczna/NowaKsiazkaTelefoniczna.csproj
+++ b/NowaKsiazkaTelefoniczna/NowaKsiazkaTelefoniczna.csproj
@@ -52,5 +52,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="EkranPowitalny.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
