--- a/NowaKsiazkaTelefoniczna/NowaKsiazkaTelefoniczna.csproj
+++ b/NowaKsiazkaTelefoniczna/NowaKsiazkaTelefoniczna.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Ksiazka.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortBook.cs" />
     <Compile Include="TabelaFormat.cs" />
     <Compile Include="TokenGenerator.cs" />
   </ItemGroup>
